style.css
body {
   background-color: black;
    font-family: "Lexend", sans-serif;
    width: 100vw;
    height: auto;
    color: white;
    margin: 0px;
    overflow-x: hidden
}

.wrapper {
    width: 100vw;
}


html, body {
  overflow-x: hidden;
  width: 100%;
  margin: 0;
  padding: 0;
}


#main-index {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 50px;
    margin-left: 80px;
}

.backgroundwrap {
    margin: 0%;
    width: 100vw;
    height: 480px;
     background-image: 
    linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
    url(bilder/backgroundeffect.jpg);
       background-size: cover;
}

.navbar:hover { 
    transform: scale(1.1);
    transition: all 0.3s ;
}

.nav-link-active {
    color: #00ffe1;
    text-decoration: none;
}

.navbar {
    transition: all 0.3s ease-in-out;
}


nav {
    font-size: 8px;
    display: flex;
    justify-content: center;
    align-items: center;
    justify-content: space-around;
    font-family: "Open Sans", sans-serif;
    font-weight: 150;
    
}
ul {
display: flex;
padding: 0%;
gap: 2rem;
 list-style: none;
}


.booknow {
  padding: 3px 20px;
  border-radius: 10px;
  font-size: 6px;
  color: #ffffff;
  text-shadow: none;
  background: transparent;
  cursor: pointer;
  border: 0.2px solid #ffffff;
  transition: all 0.5s ease;
  user-select: none;
  text-decoration: none;
  font-family: "Open Sans", sans-serif;
  font-weight: 150;
}

.booknow:hover{
  color: #000000;
  background: #ffffff;

}

.navtext { 
   
    text-decoration: none;
    color: white;
    font-family: "Lexend", sans-serif;
}

.logo {
    width: 80px;
    margin: 0;
}

header {
   margin-top: 50px;
    margin-left: 43px;
    width: 100vw;
   font-size: 12px;
   display: flex;
  justify-content: center;
  text-align: center;
 align-items: center;

}

.pixel {
    margin-top: 40px;
    height: 50px;
}

.text {
    align-items: center;
   align-content: center;
   flex-direction: column;
}

.catchy {
    margin-top: 4rem;
    margin-bottom: 0px;
}



.pixeleffect {
    width: 80px;
}


.undercatchy {
    margin-top: 6px;
}

.mywork {
    color: rgb(0, 0, 0);
    width: fit-content;
    margin-bottom: 69px;
}

.videowrapper {
    width: 50vw;
}



video {
    width: 100%;
    height: 100%;
    border-radius: 9px;
    display: block;
}


.vision {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(bilder/cube.jpg);
    background-size: cover;
    height: 600px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width: 100vw;
}

.vision p {
text-align: center;
     font-family: "Open Sans", sans-serif;
    font-weight: 150;

}


.cards:hover {
    transform: scale(1.07);
    transition: all 0.3s ease;
        border: #00ffe1 1px solid;
    box-shadow: 0 0 3px #00ffe1;
    
}



.section-text {
    text-align: center;
    margin-bottom: 30px;
}

.with {
    margin: 0;
}

.fullfill {
    color: #00ffe1;
    margin: 0;
}

.cards {
    margin-top: 30px;
    font-size: 10px;
    padding: 16px;
    padding-bottom: 26px;
    width: 150px;
    height: fit-content;
         border-radius: 5px;
    backdrop-filter: blur(11px) saturate(180%);
    -webkit-backdrop-filter: blur(11px) saturate(180%);
    background-color: rgba(17, 25, 40, 0.19);
    border-radius: 12px;
    border: 1px solid rgba(255, 255, 255, 0.125);
    line-height: 10px;
    text-align: center;
    transition: all 0.3s ease;
}

.card-header {
font-family: "Lexend", sans-serif;
line-height: 20px;
}


.card-paragraf {
Font-family: "Open Sans", sans-serif;
font-weight: 100;
font-size: 8px;
margin-bottom: 20px;
}


.flexwrap {
    display: flex;
    gap: 3rem;
}


.button-two {
    margin: 15px;
  padding: 3px 20px;
  border-radius: 10px;
  font-size: 6px;
  color: #ffffff;
  text-shadow: none;
  background: transparent;
  cursor: pointer;
  border: 1px solid #ffffff;
  transition: 0.5s ease;
  user-select: none;
  text-decoration: none;
  font-family: "Open Sans", sans-serif;
  font-weight: 150;
}

.button-two:hover {
  color: #000000;
  background: #ffffff;
}



footer {
    
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    justify-content: space-evenly;
     width: 100vw;
      color: #d7d7d7;
 background: #000000;
 padding-top: 50px;
 padding-bottom: 50px;
}


.card-footer {
    margin-top: 30px;
    margin-bottom: 100px;
    font-size: 10px;
    padding: 16px;
    width: 150px;
    height: fit-content;
    border-radius: 5px;
    background-color: rgb(0, 0, 0);
    border-radius: 12px;
    border: 1px solid rgba(0, 0, 0, 0.319);
    line-height: 20px;
    text-align: center;
   transition: all 0.3s ease;
}


.card-footer:hover {
    transform: scale(1.07);
    transition: all 0.3s ease;
        border: #00ffe1 1px solid;
     box-shadow: 0 0 3px #00ffe1;;;
}


.card-footerheader {
font-family: "Lexend", sans-serif;
}


.card-footerparagraf {
Font-family: "Open Sans", sans-serif;
font-weight: 100;
font-size: 8px;
}




.booksectionhome {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    margin: 0;
    background: #d7d7d7;
    width: 100vw;
    padding-bottom: 50px;
    padding-top: 100px;
}




.booksection-header  {
   font-family: "Lexend", sans-serif;
   font-size: 15px;
   color: #000000;
}



.lane {
    width: 150px;
    height: 90px;
    color: rgb(255, 255, 255);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.footerheader {
    font-size: 11px;
    margin: 0%;
}

.footercontent {
  font-size: 8px;
    font-weight: 200;
    margin: 0;
}



.footerlinks {
    font-size: 8px;
    font-weight: 200;
    text-decoration: none;
    color: rgb(255, 255, 255);
}


.main-book {
 background: #000000;
 display: flex;
    justify-content: center;
    padding-bottom: 150px;
}

.form-conatiner {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
      background: #b7b7b7;
    padding: 30px;
    border-radius: 8px;
    color: #000000;
    width: 300px;
    text-align: center;
    transform: scale(0.7);
}

input,textarea {
    font-size: 7px;
    padding: 5px;
    color: #000000;
    background: #d7d7d7;
    border-radius: 3px;
    border: 1px solid rgb(113, 113, 113);
    width: 100%;
}

textarea {
    outline: none;
}

label {
    Font-family: "Open Sans", sans-serif;
    font-weight: 100;
    font-size: 11px;
}


.columnformone {
    display: flex;
    justify-content: center;
    flex-direction: column;
    width: 100px;
    gap: 1em;
}

.columnwrap {
    display: flex;
    justify-content: center;
    gap: 40px;
}

input:focus {
    outline:none
}

input[type=submit] { 
border-radius: 5px;
background: #000000;
color: #ffffff;
border: solid 1px #000000;
width: 60px;
margin-top: 15px;
  transition: 0.5s ease;
  cursor: pointer;
}

#headerform {
    margin: 0;
    padding-top: 20px;
    padding-bottom: 10px;
  font-family: "Open Sans", sans-serif;
}


input[type=submit]:hover {
    color: #000000;
    border: 1px solid rgb(0, 0, 0);
      background: #b7b7b7;
}


#main-about {
    width: 100vw;
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(2, 1fr);
    gap: 2rem;
    margin-top: 25px;
    padding-bottom: 100px;
}


#cards {
    width: fit-content;
    height: fit-content;
    padding: 25px;
    border-radius: 5px;
    color: #ffffff;
    font-size: small;
        display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
        transition: all 0.5s ease;
                 border-radius: 5px;
    backdrop-filter: blur(11px) saturate(180%);
    -webkit-backdrop-filter: blur(11px) saturate(180%);
    background-color: rgba(17, 25, 40, 0.19);
    border-radius: 12px;
    border: 1px solid rgba(255, 255, 255, 0.125);
}

#cards:hover {
    transform: scale(1.05);
    transition: all 0.5s ease;
    border: #00ffe1 1px solid;
    box-shadow: 0 0 3px #00ffe1;;
}

.card-one {
    grid-column: 2/5;
}

.card-two {
    grid-column: 2/5;
}

.card-four {
    grid-column: 2/4;
  grid-row: 3/4;
}

.card-three {
    grid-column: 4/5;
}

.icon-placeholder {
    padding: 15px;
    width: 30px;
    display: flex;
    justify-content: center;
    gap: 3em;
    
}

.icons {
    transition: all 0.3s ease;
}

.icons:hover {
    transition: all 0.3s ease;
    transform: scale(1.1);

}

.about-footer {
background: #1b1b1b;
color: #ffffff;
}

svg {
    width: 20px;
}

.middlewrap {
    margin-top: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.asidewrap {
    display: flex;
    flex-direction: column;
}

.footer-book {
    background: #00544a;
}

.bgwrap {
    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)), url(bilder/bgtwo.jpg);
    background-size: cover;
}

